# Docker_Learning

./: README.md
prac_1/: Dockerfile
prac_10/: CMakeLists.txt  Dockerfile  a.out  threading_pipeing.cpp
prac_11/: a.out  client_socket.cpp  readme  script_for_prac11.sh  server_socket.cpp
prac_12/: Dockerfile  a.out  client_file.cpp  readme  script_for_prac.sh  server_file.cpp
prac_13/: CMakeLists.txt  Dockerfile  binary_literalls.cpp  client_code.cpp  server_code.cpp
prac_14/: CMakeLists.txt  Dockerfile  a.out  all_in_one.cpp  client_Code.cpp  script.sh
prac_15/: Dockerfile  setup_prac_12.sh
prac_16/: CMakeLists.txt  Dockerfile
prac_16/src/: parent_to_child.cpp  pipe_program.cpp
prac_17/: CMakeLists.txt  Dockerfile
prac_17/src/: clinet.cpp  server.cpp
prac_18/: CMakeLists.txt  Dockerfile
prac_18/include/: header.hpp
prac_18/src/: clinet.cpp  server.cpp
prac_19/: Dockerfile  readme  setup_prac_13.sh
prac_2/: Dockerfile
prac_2/source_code/: CMakeLists.txt  sort_array.cpp
prac_20/: CMakeLists.txt
prac_20/Advanced/: Dockerfile  script_11.sh
prac_20/Basic/: Dockerfile  script_11.sh
prac_20/include/: header.hpp
prac_20/src/: DataStructure.cpp  client.cpp  server.cpp
prac_21/: Dockerfile  script.sh
prac_22/: Dockerfile
prac_3/: CMakeLists.txt  Dockerfile  main.cpp  original_code.cpp  readme
prac_3/include/: problem.h
prac_3/src/: CMakeLists.txt  main.cpp  math_utils.cpp  problem_class.cpp
prac_4/: CMakeLists.txt  Dockerfile  original_code.cpp
prac_4/app/: CMakeLists.txt  main.cpp
prac_4/include/: Obj_Slicing.h  Problem.h  Solutions.h
prac_4/lib/: CMakeLists.txt  utils.cpp
prac_4/src/: Solutions.cpp
prac_4/test_dir/: main.cpp
prac_5/: CMakeLists.txt  Dockerfile  a.out  chrono_usage_learning.cpp  lockguard_with_threading.cpp  pthread_learning.cpp  pthread_with_mutex.cpp  script_to_generate.sh
prac_6/: CMakeLists.txt  Dockerfile  a.out  source_file.cpp
prac_7/: CMakeLists.txt  Dockerfile  Pipe_cpp.cpp  Pipe_program_2.cpp  a.out
prac_8/: CMakeLists.txt  Dockerfile  a.out  pipe_program.cpp  script_for_8.sh  threading.cpp
prac_9/: Dockerfile  correct_pipe  correct_pipe_file.cpp  process_file.cpp  script_target_compile_Definitions_1.sh  thead_pipe  thread_pipe.cpp  thread_working_output  thread_working_program.cpp
